handle mixed startup argument names